# ngs-variant-plugin

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml  requirements.txt  verify_bioinformatics.py  verify_setup.py
.agents/plugins/: marketplace.json
.claude-plugin/: plugin.json
commands/: variant-preflight.md
examples/: germline_samplesheet.tsv  somatic_samplesheet.tsv
references/: pipeline-registry.json  tool-registry.json
scripts/: run_alignment.py  run_germline_variants.py  run_somatic_variants.py  run_variant_annotation.py  variant_preflight.py
skills/variant-alignment/: SKILL.md
skills/variant-annotation/: SKILL.md
skills/variant-germline/: SKILL.md
skills/variant-router/: SKILL.md
skills/variant-somatic/: SKILL.md
test_data/: germline_samplesheet.tsv  somatic_samplesheet.tsv
test_data/ref/: test_genome.fa  test_genome.fa.0123
