[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ngs-variant-plugin"
version = "1.0.0"
description = "Claude Code plugin for DNA variant calling — germline and somatic"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [{name = "TARVIA-lab", email = "tarvia-lab@institution.edu"}]
keywords = ["genomics", "variants", "claude", "variant-calling", "bwa", "gatk", "snpeff"]

dependencies = ["pyyaml>=6.0", "pandas>=2.0.0", "pydantic>=2.0.0"]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/TARVIA-lab/ngs-variant-plugin"
Repository = "https://github.com/TARVIA-lab/ngs-variant-plugin.git"
